# terminal-bridge

./: .gitignore  LICENSE  LINKEDIN_POST.md  README.md  pyproject.toml
.github/: CODEOWNERS
docs/: index.html
packaging/homebrew/: terminal-bridge.rb
src/terminal_bridge/: __init__.py  cli.py  config.py  version.py
src/terminal_bridge/enterprise/: __init__.py  admin_api.py  audit.py  cli.py  dashboard.py  fleet.py  policies.py  rbac.py
src/terminal_bridge/local_bridge/: __init__.py  client.py  mcp_server.py  rest_api.py  stdio_pipe.py  virtual_term.py
src/terminal_bridge/protocol/: __init__.py  messages.py
src/terminal_bridge/relay/: __init__.py  server.py
src/terminal_bridge/remote_agent/: __init__.py  auth.py  pty_manager.py  server.py
src/terminal_bridge/security/: __init__.py  keychain.py  tls.py  tokens.py
src/terminal_bridge/setup/: __init__.py  bonjour.py  cursor_config.py  firewall.py  launchd.py  pairing.py  wizard.py
tests/: __init__.py  test_config.py  test_integration.py  test_protocol.py  test_security.py
